kemampuan-dasar/bulan01/minggu03/hari02/install flask
syafak@syafak-IdeaPad-5-14ITL05:~$ sudo apt update
[sudo] password for syafak:      
Sorry, try again.
[sudo] password for syafak:       
Hit:1 http://packages.microsoft.com/repos/code stable InRelease
Get:2 http://security.ubuntu.com/ubuntu focal-security InRelease [114 kB]      
Hit:3 http://archive.ubuntu.com/ubuntu focal InRelease                         
Ign:4 http://repo.mongodb.org/apt/debian buster/mongodb-org/4.4 InRelease      
Hit:5 http://ppa.launchpad.net/apandada1/brightness-controller/ubuntu focal InRelease
Get:6 http://archive.ubuntu.com/ubuntu focal-updates InRelease [114 kB]        
Ign:7 http://repo.mongodb.org/apt/debian buster/mongodb-org/5.0 InRelease      
Ign:8 http://packages.linuxmint.com una InRelease                              
Hit:9 http://repo.mongodb.org/apt/debian buster/mongodb-org/4.4 Release        
Hit:11 http://packages.linuxmint.com una Release                               
Hit:13 http://repo.mongodb.org/apt/debian buster/mongodb-org/5.0 Release       
Hit:15 http://archive.canonical.com/ubuntu focal InRelease                     
Get:16 http://archive.ubuntu.com/ubuntu focal-backports InRelease [108 kB]
Get:17 http://archive.ubuntu.com/ubuntu focal-updates/main amd64 Packages [1.789 kB]
Get:18 http://archive.ubuntu.com/ubuntu focal-updates/universe amd64 Packages [921 kB]
Fetched 3.045 kB in 6s (524 kB/s)                          
Reading package lists... Done
Building dependency tree       
Reading state information... Done
5 packages can be upgraded. Run 'apt list --upgradable' to see them.
N: Skipping acquire of configured file 'main/binary-i386/Packages' as repository 'http://repo.mongodb.org/apt/debian buster/mongodb-org/4.4 InRelease' doesn't support architecture 'i386'
N: Skipping acquire of configured file 'main/binary-i386/Packages' as repository 'http://repo.mongodb.org/apt/debian buster/mongodb-org/5.0 InRelease' doesn't support architecture 'i386'
syafak@syafak-IdeaPad-5-14ITL05:~$ pip install flask
Collecting flask
  Downloading Flask-2.1.2-py3-none-any.whl (95 kB)
     |████████████████████████████████| 95 kB 127 kB/s 
Collecting importlib-metadata>=3.6.0; python_version < "3.10"
  Downloading importlib_metadata-4.11.3-py3-none-any.whl (18 kB)
Collecting itsdangerous>=2.0
  Downloading itsdangerous-2.1.2-py3-none-any.whl (15 kB)
Collecting Werkzeug>=2.0
  Downloading Werkzeug-2.1.2-py3-none-any.whl (224 kB)
     |████████████████████████████████| 224 kB 2.1 MB/s 
Collecting click>=8.0
  Downloading click-8.1.3-py3-none-any.whl (96 kB)
     |████████████████████████████████| 96 kB 4.2 MB/s 
Collecting Jinja2>=3.0
  Downloading Jinja2-3.1.2-py3-none-any.whl (133 kB)
     |████████████████████████████████| 133 kB 10.0 MB/s 
Collecting zipp>=0.5
  Downloading zipp-3.8.0-py3-none-any.whl (5.4 kB)
Collecting MarkupSafe>=2.0
  Downloading MarkupSafe-2.1.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (25 kB)
Installing collected packages: zipp, importlib-metadata, itsdangerous, Werkzeug, click, MarkupSafe, Jinja2, flask
  WARNING: The script flask is installed in '/home/syafak/.local/bin' which is not on PATH.
  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.
Successfully installed Jinja2-3.1.2 MarkupSafe-2.1.1 Werkzeug-2.1.2 click-8.1.3 flask-2.1.2 importlib-metadata-4.11.3 itsdangerous-2.1.2 zipp-3.8.0
syafak@syafak-IdeaPad-5-14ITL05:~$ 



carane ben mlakuuuu


syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar/flask-app$ cd ..
syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar$ cd ..
syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy$ cd ..
syafak@syafak-IdeaPad-5-14ITL05:~$ sudo apt install python3-pip
^Citing for cache lock: Could not get lock /var/lib/dpkg/lock-frontend. It is held by process 587386 (apt)... 1283s
syafak@syafak-IdeaPad-5-14ITL05:~$ sudo pip3 install virtualenv
[sudo] password for syafak:       
Requirement already satisfied: virtualenv in /usr/lib/python3/dist-packages (20.0.17)
syafak@syafak-IdeaPad-5-14ITL05:~$ cd Praxis-Academy
syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy$ cd kemampuan-dasar
syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar$ cd flask-app
syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar/flask-app$ virtualenv env
created virtual environment CPython3.8.10.final.0-64 in 106ms
  creator CPython3Posix(dest=/home/syafak/Praxis-Academy/kemampuan-dasar/flask-app/env, clear=False, global=False)
  seeder FromAppData(download=False, pip=latest, setuptools=latest, wheel=latest, pkg_resources=latest, via=copy, app_data_dir=/home/syafak/.local/share/virtualenv/seed-app-data/v1.0.1.debian.1)
  activators BashActivator,CShellActivator,FishActivator,PowerShellActivator,PythonActivator,XonshActivator
syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar/flask-app$ ls -l
total 4
drwxrwxr-x 4 syafak syafak 4096 May 20 15:29 env
syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar/flask-app$ source env/bin/activate
(env) syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar/flask-app$ pip install flask
Collecting flask
  Using cached Flask-2.1.2-py3-none-any.whl (95 kB)
Collecting importlib-metadata>=3.6.0; python_version < "3.10"
  Using cached importlib_metadata-4.11.3-py3-none-any.whl (18 kB)
Collecting itsdangerous>=2.0
  Using cached itsdangerous-2.1.2-py3-none-any.whl (15 kB)
Collecting Werkzeug>=2.0
  Using cached Werkzeug-2.1.2-py3-none-any.whl (224 kB)
Collecting Jinja2>=3.0
  Using cached Jinja2-3.1.2-py3-none-any.whl (133 kB)
Collecting click>=8.0
  Using cached click-8.1.3-py3-none-any.whl (96 kB)
Collecting zipp>=0.5
  Using cached zipp-3.8.0-py3-none-any.whl (5.4 kB)
Collecting MarkupSafe>=2.0
  Using cached MarkupSafe-2.1.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (25 kB)
Installing collected packages: zipp, importlib-metadata, itsdangerous, Werkzeug, MarkupSafe, Jinja2, click, flask
Successfully installed Jinja2-3.1.2 MarkupSafe-2.1.1 Werkzeug-2.1.2 click-8.1.3 flask-2.1.2 importlib-metadata-4.11.3 itsdangerous-2.1.2 zipp-3.8.0
(env) syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar/flask-app$ nano run.py
(env) syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar/flask-app$ python run.py
  File "run.py", line 9
    if __name__ == "__main__:
                            ^
SyntaxError: EOL while scanning string literal
(env) syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar/flask-app$ nano run.py
(env) syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar/flask-app$ python run.py
 * Serving Flask app 'run' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: on
 * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 260-954-551
127.0.0.1 - - [20/May/2022 15:37:21] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [20/May/2022 15:37:21] "GET /favicon.ico HTTP/1.1" 404 -





menonaktifkan


(env) syafak@syafak-IdeaPad-5-14ITL05:~/Praxis-Academy/kemampuan-dasar/flask-app$ deactivate
